<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="20dp"
            android:text="@string/Faca_Login"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/Digite_User"
            android:padding="20dp" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:hint="@string/Digite_Senha"
            android:inputType="textPassword"
            android:padding="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:padding="20dp" >

        <Button
            android:id="@+id/btnEntrar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/Entrar"
            android:onClick="entrar"
             />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelar"
            android:layout_margin="15dp"
            android:text="@string/Cancelar"
            />

    </LinearLayout>

</LinearLayout>