<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/Img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/Descricao"
        android:padding="10dp"
        android:paddingTop="30dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom" 
        android:padding="20dp">

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="entrar"
            android:text="@string/Entrar" 
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/btnInscrever"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="increver"
            android:text="@string/Inscrever"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>