<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doados"
        android:textColor="#FF0000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listViewDoei"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10" >

    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doaram"
        android:textColor="#FF0000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listViewDoaram"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10" >

    </ListView>

    <Button
        android:id="@+id/btnVoltar"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="0.05"
        android:onClick="voltar"
        android:text="@string/voltar" />

</LinearLayout>